# sdk-python

./: .gitignore  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
tests/: test_client.py
wsocket/: __init__.py  client.py
