[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wsocket-sdk"
version = "0.1.0"
description = "wSocket Realtime Pub/Sub SDK for Python"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
authors = [
    {name = "wSocket", email = "dev@wsocket.io"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries",
]
keywords = ["websocket", "pubsub", "realtime", "wsocket"]
dependencies = [
    "websockets>=12.0",
]

[project.urls]
Homepage = "https://wsocket.io"
Repository = "https://github.com/wsocket-io/sdk-python"
Documentation = "https://docs.wsocket.io"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[tool.setuptools.packages.find]
include = ["wsocket*"]
